Bug 164270 - Checkbox is duplicated/glitchy, depending on zoom level (gtk3, kf5/kf6)
Summary: Checkbox is duplicated/glitchy, depending on zoom level (gtk3, kf5/kf6)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5 GTK3 Qt6 CairoSDPR
  Show dependency treegraph
 
Reported: 2024-12-10 17:20 UTC by Buovjaga
Modified: 2025-01-30 09:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-12-10 17:20:51 UTC
1. Open any LibreOffice app
2. View - Toolbars - Form Controls
3. Draw a checkbox, resize it so you can see the label and zoom in, so the text is not tiny
4. Deactivate form design mode

There are two overlapping copies of the checkbox rendered. They kind of go out of sync when you zoom in.

Bibisected with linux-64-25.2 to bf3cd8e50f886084500e3a8ff72ff4ffab05ddd7
CairoSDPR: Make using SDPR dependent of ExperimentalMode

First reported in bug 163175 comment 5.
Comment 1 m_a_riosv 2024-12-10 22:52:46 UTC
Can't reproduce with
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a1b8b44bf99b331f6cd4b4583d08b6a01d5c4f03
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Buovjaga 2024-12-11 05:28:11 UTC
(In reply to m_a_riosv from comment #1)
> Can't reproduce with
> Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: a1b8b44bf99b331f6cd4b4583d08b6a01d5c4f03
> CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render:
> Skia/Raster; VCL: win
> Locale: es-ES (es_ES); UI: en-US
> Calc: CL threaded

Yes, this is only seen on Linux with gtk3 and KDE UIs (not gen UI).
Comment 3 Armin Le Grand (collabora) 2024-12-17 14:04:49 UTC
Acknowleding, happens as described. In live-mode (non-design-mode) the control is an incarnated window and paints itself. Have to check SDPR for that...
Comment 4 Armin Le Grand (collabora) 2024-12-18 12:48:14 UTC
Not as easy as it sounds, also comphelper::LibreOfficeKit::isActive() plays in, see VclPixelProcessor2D::processControlPrimitive2D. Thinking about controling that visibility already in VOC stuff...
Comment 5 Commit Notification 2024-12-19 18:04:46 UTC
Armin Le Grand (Collabora) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f3f70ef02f04d876abb768bb3ec65645ddb8d89d

tdf#164270 CairoSDPR: Correct Control rendering

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-12-24 10:57:07 UTC
Armin Le Grand (Collabora) committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ebe2b46b3adb8b8c61c1f2f5dba02a58887be4db

tdf#164270 CairoSDPR: Correct Control rendering

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Buovjaga 2024-12-26 11:23:34 UTC
Verified, thanks, feel free to close as fixed.

You also fixed bug 164460 with the same commit.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4b547f11ae3e943e67c195a67a033307ce7f1d6d
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 8 Michael Weghorn 2025-01-30 09:23:30 UTC
*** Bug 164710 has been marked as a duplicate of this bug. ***