tdf#164270 CairoSDPR: Correct Control rendering

Controls need not to be rendered when they are
visible as Windows (they then render themselves).
Also added some needed cleanups for better display
of control primitive decomposition as Bitmap.

Change-Id: I976cd791f9f080a7ab567232303d5d4f0b6dff05
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178725
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
(cherry picked from commit f3f70ef02f04d876abb768bb3ec65645ddb8d89d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178840
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>